[landing] Fix issue with blurry downscaled images
Summary: Solution via GoojajiGreg on StackOverflow: https://stackoverflow.com/questions/37906602/blurry-downscaled-images-in-chrome/69137897#69137897

Test Plan: na

Reviewers: ashoat, palys-swm

Reviewed By: ashoat

Subscribers: palys-swm, Adrian, karol-bisztyga, benschac, boristopalov

Differential Revision: https://phabricator.ashoat.com/D2220

--- a/landing/landing.css
+++ b/landing/landing.css
@@ -33,6 +33,20 @@ a {
   margin-bottom: 0;
 }
 
+@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+  img {
+    image-rendering: -webkit-optimize-contrast !important;
+  }
+}
+
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
+    img {
+      image-rendering: unset !important;
+    }
+  }
+}
+
 /* ===== TEXT STYLES ===== */
 h1 {
   font-size: 58px;
